user name long overlap fixed, seguir button log in checked

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/shared_userinfo.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/shared_userinfo.less
@@ -2,7 +2,11 @@
     margin-top: 16px;
     display: inline-block;
     color: black;
-    margin-left:5px;
+    margin-left: 5px;
+    max-width: 130px;
+    max-height: 40px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .user-info {
     padding-left:15px;
